Stretched images and Mail-notification *fix*

--- a/src/main/resources/static/frontend/src/sass/styles.scss
+++ b/src/main/resources/static/frontend/src/sass/styles.scss
@@ -45,6 +45,8 @@
 .tradeHub-cardImg {
   width: 100%;
   height: 30vh;
+  object-fit: cover;
+  object-position: center;
 }
 .tradeHub-card {
   height: 60vh;
